# TranscriptionBot

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_SUMMARY.md  AUTO_AUTH_SETUP.md  CODE_QUALITY_IMPROVEMENTS.md  HOW_TO_CREATE_PAYME_PAYMENT.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  PAYMENT_GATEWAY_UPDATES.md  PAYME_CONFIGURATION_GUIDE.md  PRICING_MANAGEMENT.md  PRICING_SETUP.md  QUICK_FIX_GUIDE.md  QUICK_SETUP.md  SETUP_GUIDE.md  TELEGRAM_AUTH_GUIDE.md  TELEGRAM_MINIAPP_SETUP.md  TRANSCRIPTION_FIX.md  UPDATE_COMMANDS.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
bot/: config.py  django_setup.py  main.py  main_backup.py
bot/filters/: __init__.py  admin_filters.py  chat_filters.py  media_filters.py  payment_filters.py
bot/handlers/: admin.py  balance.py  errors.py  history.py  media.py  payment.py  start.py  wallet.py  webapp.py
bot/keyboards/: inline_keyboards.py  main_menu.py  payment_keyboards.py
bot/middlewares/: __init__.py  auth.py  balance_check.py  database.py  logging.py  throttling.py
bot/states/: __init__.py  admin_states.py  payment_status.py  transcription_states.py
bot/utils/: __init__.py  commands.py  decorators.py  formatters.py  helpers.py  messages.py  notifications.py  setup_menu_button.py  update_commands.py  validators.py
core/: __init__.py  constants.py  database.py  enums.py  exceptions.py  logging.py  models.py  utils.py
deployment/: .env.production.example  DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  deploy.sh  gunicorn_config.py  nginx-transcriptionbot.conf  transcriptionbot-django.service  transcriptionbot-telegram.service
django_admin/: db.sqlite3
django_admin/apps/pricing/: admin.py  models.py  utils.py
django_admin/apps/transactions/: admin.py  apps.py  models.py  serializers.py  urls.py  urls_backup.py  views.py  views_backup.py
django_admin/apps/transactions/tests/: __init__.py  conftest.py  test_click_webhook.py  test_payme_webhook.py
django_admin/apps/transcriptions/: admin.py  models.py  serializers.py  urls.py  views.py
django_admin/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
django_admin/apps/wallet/: admin.py  models.py  serializers.py  urls.py  views.py
django_admin/config/: asgi.py  health_checks.py  sentry_config.py  urls.py  wsgi.py
django_admin/config/settings/: base.py  development.py  production.py
django_admin/core/: __init__.py  enums.py
django_admin/scripts/: create_default_pricing.py
django_admin/templates/: base.html  dashboard.html  error.html  landing.html  payment.html  transcriptions.html  upload.html
django_admin/webapp/: models.py  telegram_auth.py  urls.py  views.py
examples/: wallet_integration_demo.py
requirements/: base.txt  development.txt  production.txt
services/: auth_service.py  media_utils.py  wallet_service.py
services/notification/: telegram_notifier.py
services/payment/: click_service.py  payme_service.py  wallet_service.py
services/transcription/: base.py  gemini_service.py
